3_Semantic/y.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: decl_list
    2        | error

    3 decl_list: decl_list decl
    4          | decl

    5 decl: var_decl
    6     | func_decl

    7 var_decl: type_spec identifier SEMI
    8         | type_spec identifier LBRACE const_val RBRACE SEMI

    9 type_spec: INT
   10          | VOID

   11 func_decl: type_spec identifier LPAREN params RPAREN comp_stmt

   12 params: params_list
   13       | VOID

   14 params_list: params_list COMMA param
   15            | param

   16 param: type_spec identifier
   17      | type_spec identifier LBRACE RBRACE

   18 comp_stmt: LCURLY locl_decl stmt_list RCURLY

   19 locl_decl: locl_decl var_decl
   20          | %empty

   21 stmt_list: stmt_list stmt
   22          | %empty

   23 stmt: exp_stmt
   24     | comp_stmt
   25     | selec_stmt
   26     | iter_stmt
   27     | return_stmt

   28 exp_stmt: exp SEMI
   29         | SEMI

   30 selec_stmt: IF LPAREN exp RPAREN stmt
   31           | IF LPAREN exp RPAREN stmt ELSE stmt

   32 iter_stmt: WHILE LPAREN exp RPAREN stmt

   33 return_stmt: RETURN SEMI
   34            | RETURN exp SEMI

   35 exp: var ASSIGN exp
   36    | simple_exp

   37 var: identifier
   38    | identifier LBRACE exp RBRACE

   39 simple_exp: addtive_exp relop addtive_exp
   40           | addtive_exp

   41 relop: EQ
   42      | NE
   43      | LT
   44      | LE
   45      | GT
   46      | GE

   47 addtive_exp: addtive_exp addop term
   48            | term

   49 addop: PLUS
   50      | MINUS

   51 term: term mulop factor
   52     | factor

   53 mulop: TIMES
   54      | OVER

   55 factor: LPAREN exp RPAREN
   56       | var
   57       | call
   58       | const_val

   59 call: identifier LPAREN args RPAREN

   60 args: arg_list
   61     | %empty

   62 arg_list: arg_list COMMA exp
   63         | exp

   64 identifier: ID

   65 const_val: NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2
    THEN (258)
    IF (259) 30 31
    ELSE (260) 31
    WHILE (261) 32
    RETURN (262) 33 34
    INT (263) 9
    VOID (264) 10 13
    ID (265) 64
    NUM (266) 65
    COMMA (267) 14 62
    ASSIGN (268) 35
    EQ (269) 41
    NE (270) 42
    LT (271) 43
    LE (272) 44
    GT (273) 45
    GE (274) 46
    PLUS (275) 49
    MINUS (276) 50
    TIMES (277) 53
    OVER (278) 54
    LPAREN (279) 11 30 31 32 55 59
    RPAREN (280) 11 30 31 32 55 59
    LBRACE (281) 8 17 38
    RBRACE (282) 8 17 38
    LCURLY (283) 18
    RCURLY (284) 18
    SEMI (285) 7 8 28 29 33 34
    ERROR (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    program (33)
        on left: 1 2
        on right: 0
    decl_list (34)
        on left: 3 4
        on right: 1 3
    decl (35)
        on left: 5 6
        on right: 3 4
    var_decl (36)
        on left: 7 8
        on right: 5 19
    type_spec (37)
        on left: 9 10
        on right: 7 8 11 16 17
    func_decl (38)
        on left: 11
        on right: 6
    params (39)
        on left: 12 13
        on right: 11
    params_list (40)
        on left: 14 15
        on right: 12 14
    param (41)
        on left: 16 17
        on right: 14 15
    comp_stmt (42)
        on left: 18
        on right: 11 24
    locl_decl (43)
        on left: 19 20
        on right: 18 19
    stmt_list (44)
        on left: 21 22
        on right: 18 21
    stmt (45)
        on left: 23 24 25 26 27
        on right: 21 30 31 32
    exp_stmt (46)
        on left: 28 29
        on right: 23
    selec_stmt (47)
        on left: 30 31
        on right: 25
    iter_stmt (48)
        on left: 32
        on right: 26
    return_stmt (49)
        on left: 33 34
        on right: 27
    exp (50)
        on left: 35 36
        on right: 28 30 31 32 34 35 38 55 62 63
    var (51)
        on left: 37 38
        on right: 35 56
    simple_exp (52)
        on left: 39 40
        on right: 36
    relop (53)
        on left: 41 42 43 44 45 46
        on right: 39
    addtive_exp (54)
        on left: 47 48
        on right: 39 40 47
    addop (55)
        on left: 49 50
        on right: 47
    term (56)
        on left: 51 52
        on right: 47 48 51
    mulop (57)
        on left: 53 54
        on right: 51
    factor (58)
        on left: 55 56 57 58
        on right: 51 52
    call (59)
        on left: 59
        on right: 57
    args (60)
        on left: 60 61
        on right: 59
    arg_list (61)
        on left: 62 63
        on right: 60 62
    identifier (62)
        on left: 64
        on right: 7 8 11 16 17 37 38 59
    const_val (63)
        on left: 65
        on right: 8 58


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    INT    shift, and go to state 2
    VOID   shift, and go to state 3

    program    go to state 4
    decl_list  go to state 5
    decl       go to state 6
    var_decl   go to state 7
    type_spec  go to state 8
    func_decl  go to state 9


State 1

    2 program: error .

    $default  reduce using rule 2 (program)


State 2

    9 type_spec: INT .

    $default  reduce using rule 9 (type_spec)


State 3

   10 type_spec: VOID .

    $default  reduce using rule 10 (type_spec)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 10


State 5

    1 program: decl_list .
    3 decl_list: decl_list . decl

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 1 (program)

    decl       go to state 11
    var_decl   go to state 7
    type_spec  go to state 8
    func_decl  go to state 9


State 6

    4 decl_list: decl .

    $default  reduce using rule 4 (decl_list)


State 7

    5 decl: var_decl .

    $default  reduce using rule 5 (decl)


State 8

    7 var_decl: type_spec . identifier SEMI
    8         | type_spec . identifier LBRACE const_val RBRACE SEMI
   11 func_decl: type_spec . identifier LPAREN params RPAREN comp_stmt

    ID  shift, and go to state 12

    identifier  go to state 13


State 9

    6 decl: func_decl .

    $default  reduce using rule 6 (decl)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    3 decl_list: decl_list decl .

    $default  reduce using rule 3 (decl_list)


State 12

   64 identifier: ID .

    $default  reduce using rule 64 (identifier)


State 13

    7 var_decl: type_spec identifier . SEMI
    8         | type_spec identifier . LBRACE const_val RBRACE SEMI
   11 func_decl: type_spec identifier . LPAREN params RPAREN comp_stmt

    LPAREN  shift, and go to state 14
    LBRACE  shift, and go to state 15
    SEMI    shift, and go to state 16


State 14

   11 func_decl: type_spec identifier LPAREN . params RPAREN comp_stmt

    INT   shift, and go to state 2
    VOID  shift, and go to state 17

    type_spec    go to state 18
    params       go to state 19
    params_list  go to state 20
    param        go to state 21


State 15

    8 var_decl: type_spec identifier LBRACE . const_val RBRACE SEMI

    NUM  shift, and go to state 22

    const_val  go to state 23


State 16

    7 var_decl: type_spec identifier SEMI .

    $default  reduce using rule 7 (var_decl)


State 17

   10 type_spec: VOID .
   13 params: VOID .

    RPAREN    reduce using rule 13 (params)
    $default  reduce using rule 10 (type_spec)


State 18

   16 param: type_spec . identifier
   17      | type_spec . identifier LBRACE RBRACE

    ID  shift, and go to state 12

    identifier  go to state 24


State 19

   11 func_decl: type_spec identifier LPAREN params . RPAREN comp_stmt

    RPAREN  shift, and go to state 25


State 20

   12 params: params_list .
   14 params_list: params_list . COMMA param

    COMMA  shift, and go to state 26

    $default  reduce using rule 12 (params)


State 21

   15 params_list: param .

    $default  reduce using rule 15 (params_list)


State 22

   65 const_val: NUM .

    $default  reduce using rule 65 (const_val)


State 23

    8 var_decl: type_spec identifier LBRACE const_val . RBRACE SEMI

    RBRACE  shift, and go to state 27


State 24

   16 param: type_spec identifier .
   17      | type_spec identifier . LBRACE RBRACE

    LBRACE  shift, and go to state 28

    $default  reduce using rule 16 (param)


State 25

   11 func_decl: type_spec identifier LPAREN params RPAREN . comp_stmt

    LCURLY  shift, and go to state 29

    comp_stmt  go to state 30


State 26

   14 params_list: params_list COMMA . param

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    type_spec  go to state 18
    param      go to state 31


State 27

    8 var_decl: type_spec identifier LBRACE const_val RBRACE . SEMI

    SEMI  shift, and go to state 32


State 28

   17 param: type_spec identifier LBRACE . RBRACE

    RBRACE  shift, and go to state 33


State 29

   18 comp_stmt: LCURLY . locl_decl stmt_list RCURLY

    $default  reduce using rule 20 (locl_decl)

    locl_decl  go to state 34


State 30

   11 func_decl: type_spec identifier LPAREN params RPAREN comp_stmt .

    $default  reduce using rule 11 (func_decl)


State 31

   14 params_list: params_list COMMA param .

    $default  reduce using rule 14 (params_list)


State 32

    8 var_decl: type_spec identifier LBRACE const_val RBRACE SEMI .

    $default  reduce using rule 8 (var_decl)


State 33

   17 param: type_spec identifier LBRACE RBRACE .

    $default  reduce using rule 17 (param)


State 34

   18 comp_stmt: LCURLY locl_decl . stmt_list RCURLY
   19 locl_decl: locl_decl . var_decl

    INT   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 22 (stmt_list)

    var_decl   go to state 35
    type_spec  go to state 36
    stmt_list  go to state 37


State 35

   19 locl_decl: locl_decl var_decl .

    $default  reduce using rule 19 (locl_decl)


State 36

    7 var_decl: type_spec . identifier SEMI
    8         | type_spec . identifier LBRACE const_val RBRACE SEMI

    ID  shift, and go to state 12

    identifier  go to state 38


State 37

   18 comp_stmt: LCURLY locl_decl stmt_list . RCURLY
   21 stmt_list: stmt_list . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    RCURLY  shift, and go to state 43
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 46
    exp_stmt     go to state 47
    selec_stmt   go to state 48
    iter_stmt    go to state 49
    return_stmt  go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 38

    7 var_decl: type_spec identifier . SEMI
    8         | type_spec identifier . LBRACE const_val RBRACE SEMI

    LBRACE  shift, and go to state 15
    SEMI    shift, and go to state 16


State 39

   30 selec_stmt: IF . LPAREN exp RPAREN stmt
   31           | IF . LPAREN exp RPAREN stmt ELSE stmt

    LPAREN  shift, and go to state 60


State 40

   32 iter_stmt: WHILE . LPAREN exp RPAREN stmt

    LPAREN  shift, and go to state 61


State 41

   33 return_stmt: RETURN . SEMI
   34            | RETURN . exp SEMI

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42
    SEMI    shift, and go to state 62

    exp          go to state 63
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 42

   55 factor: LPAREN . exp RPAREN

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    exp          go to state 64
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 43

   18 comp_stmt: LCURLY locl_decl stmt_list RCURLY .

    $default  reduce using rule 18 (comp_stmt)


State 44

   29 exp_stmt: SEMI .

    $default  reduce using rule 29 (exp_stmt)


State 45

   24 stmt: comp_stmt .

    $default  reduce using rule 24 (stmt)


State 46

   21 stmt_list: stmt_list stmt .

    $default  reduce using rule 21 (stmt_list)


State 47

   23 stmt: exp_stmt .

    $default  reduce using rule 23 (stmt)


State 48

   25 stmt: selec_stmt .

    $default  reduce using rule 25 (stmt)


State 49

   26 stmt: iter_stmt .

    $default  reduce using rule 26 (stmt)


State 50

   27 stmt: return_stmt .

    $default  reduce using rule 27 (stmt)


State 51

   28 exp_stmt: exp . SEMI

    SEMI  shift, and go to state 65


State 52

   35 exp: var . ASSIGN exp
   56 factor: var .

    ASSIGN  shift, and go to state 66

    $default  reduce using rule 56 (factor)


State 53

   36 exp: simple_exp .

    $default  reduce using rule 36 (exp)


State 54

   39 simple_exp: addtive_exp . relop addtive_exp
   40           | addtive_exp .
   47 addtive_exp: addtive_exp . addop term

    EQ     shift, and go to state 67
    NE     shift, and go to state 68
    LT     shift, and go to state 69
    LE     shift, and go to state 70
    GT     shift, and go to state 71
    GE     shift, and go to state 72
    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 40 (simple_exp)

    relop  go to state 75
    addop  go to state 76


State 55

   48 addtive_exp: term .
   51 term: term . mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 48 (addtive_exp)

    mulop  go to state 79


State 56

   52 term: factor .

    $default  reduce using rule 52 (term)


State 57

   57 factor: call .

    $default  reduce using rule 57 (factor)


State 58

   37 var: identifier .
   38    | identifier . LBRACE exp RBRACE
   59 call: identifier . LPAREN args RPAREN

    LPAREN  shift, and go to state 80
    LBRACE  shift, and go to state 81

    $default  reduce using rule 37 (var)


State 59

   58 factor: const_val .

    $default  reduce using rule 58 (factor)


State 60

   30 selec_stmt: IF LPAREN . exp RPAREN stmt
   31           | IF LPAREN . exp RPAREN stmt ELSE stmt

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    exp          go to state 82
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 61

   32 iter_stmt: WHILE LPAREN . exp RPAREN stmt

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    exp          go to state 83
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 62

   33 return_stmt: RETURN SEMI .

    $default  reduce using rule 33 (return_stmt)


State 63

   34 return_stmt: RETURN exp . SEMI

    SEMI  shift, and go to state 84


State 64

   55 factor: LPAREN exp . RPAREN

    RPAREN  shift, and go to state 85


State 65

   28 exp_stmt: exp SEMI .

    $default  reduce using rule 28 (exp_stmt)


State 66

   35 exp: var ASSIGN . exp

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    exp          go to state 86
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 67

   41 relop: EQ .

    $default  reduce using rule 41 (relop)


State 68

   42 relop: NE .

    $default  reduce using rule 42 (relop)


State 69

   43 relop: LT .

    $default  reduce using rule 43 (relop)


State 70

   44 relop: LE .

    $default  reduce using rule 44 (relop)


State 71

   45 relop: GT .

    $default  reduce using rule 45 (relop)


State 72

   46 relop: GE .

    $default  reduce using rule 46 (relop)


State 73

   49 addop: PLUS .

    $default  reduce using rule 49 (addop)


State 74

   50 addop: MINUS .

    $default  reduce using rule 50 (addop)


State 75

   39 simple_exp: addtive_exp relop . addtive_exp

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    var          go to state 87
    addtive_exp  go to state 88
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 76

   47 addtive_exp: addtive_exp addop . term

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    var         go to state 87
    term        go to state 89
    factor      go to state 56
    call        go to state 57
    identifier  go to state 58
    const_val   go to state 59


State 77

   53 mulop: TIMES .

    $default  reduce using rule 53 (mulop)


State 78

   54 mulop: OVER .

    $default  reduce using rule 54 (mulop)


State 79

   51 term: term mulop . factor

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    var         go to state 87
    factor      go to state 90
    call        go to state 57
    identifier  go to state 58
    const_val   go to state 59


State 80

   59 call: identifier LPAREN . args RPAREN

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    $default  reduce using rule 61 (args)

    exp          go to state 91
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    args         go to state 92
    arg_list     go to state 93
    identifier   go to state 58
    const_val    go to state 59


State 81

   38 var: identifier LBRACE . exp RBRACE

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    exp          go to state 94
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 82

   30 selec_stmt: IF LPAREN exp . RPAREN stmt
   31           | IF LPAREN exp . RPAREN stmt ELSE stmt

    RPAREN  shift, and go to state 95


State 83

   32 iter_stmt: WHILE LPAREN exp . RPAREN stmt

    RPAREN  shift, and go to state 96


State 84

   34 return_stmt: RETURN exp SEMI .

    $default  reduce using rule 34 (return_stmt)


State 85

   55 factor: LPAREN exp RPAREN .

    $default  reduce using rule 55 (factor)


State 86

   35 exp: var ASSIGN exp .

    $default  reduce using rule 35 (exp)


State 87

   56 factor: var .

    $default  reduce using rule 56 (factor)


State 88

   39 simple_exp: addtive_exp relop addtive_exp .
   47 addtive_exp: addtive_exp . addop term

    PLUS   shift, and go to state 73
    MINUS  shift, and go to state 74

    $default  reduce using rule 39 (simple_exp)

    addop  go to state 76


State 89

   47 addtive_exp: addtive_exp addop term .
   51 term: term . mulop factor

    TIMES  shift, and go to state 77
    OVER   shift, and go to state 78

    $default  reduce using rule 47 (addtive_exp)

    mulop  go to state 79


State 90

   51 term: term mulop factor .

    $default  reduce using rule 51 (term)


State 91

   63 arg_list: exp .

    $default  reduce using rule 63 (arg_list)


State 92

   59 call: identifier LPAREN args . RPAREN

    RPAREN  shift, and go to state 97


State 93

   60 args: arg_list .
   62 arg_list: arg_list . COMMA exp

    COMMA  shift, and go to state 98

    $default  reduce using rule 60 (args)


State 94

   38 var: identifier LBRACE exp . RBRACE

    RBRACE  shift, and go to state 99


State 95

   30 selec_stmt: IF LPAREN exp RPAREN . stmt
   31           | IF LPAREN exp RPAREN . stmt ELSE stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 100
    exp_stmt     go to state 47
    selec_stmt   go to state 48
    iter_stmt    go to state 49
    return_stmt  go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 96

   32 iter_stmt: WHILE LPAREN exp RPAREN . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 101
    exp_stmt     go to state 47
    selec_stmt   go to state 48
    iter_stmt    go to state 49
    return_stmt  go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 97

   59 call: identifier LPAREN args RPAREN .

    $default  reduce using rule 59 (call)


State 98

   62 arg_list: arg_list COMMA . exp

    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42

    exp          go to state 102
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 99

   38 var: identifier LBRACE exp RBRACE .

    $default  reduce using rule 38 (var)


State 100

   30 selec_stmt: IF LPAREN exp RPAREN stmt .
   31           | IF LPAREN exp RPAREN stmt . ELSE stmt

    ELSE  shift, and go to state 103

    $default  reduce using rule 30 (selec_stmt)


State 101

   32 iter_stmt: WHILE LPAREN exp RPAREN stmt .

    $default  reduce using rule 32 (iter_stmt)


State 102

   62 arg_list: arg_list COMMA exp .

    $default  reduce using rule 62 (arg_list)


State 103

   31 selec_stmt: IF LPAREN exp RPAREN stmt ELSE . stmt

    IF      shift, and go to state 39
    WHILE   shift, and go to state 40
    RETURN  shift, and go to state 41
    ID      shift, and go to state 12
    NUM     shift, and go to state 22
    LPAREN  shift, and go to state 42
    LCURLY  shift, and go to state 29
    SEMI    shift, and go to state 44

    comp_stmt    go to state 45
    stmt         go to state 104
    exp_stmt     go to state 47
    selec_stmt   go to state 48
    iter_stmt    go to state 49
    return_stmt  go to state 50
    exp          go to state 51
    var          go to state 52
    simple_exp   go to state 53
    addtive_exp  go to state 54
    term         go to state 55
    factor       go to state 56
    call         go to state 57
    identifier   go to state 58
    const_val    go to state 59


State 104

   31 selec_stmt: IF LPAREN exp RPAREN stmt ELSE stmt .

    $default  reduce using rule 31 (selec_stmt)
